--- a/findaword/Guidelines_files/Guidelines.css
+++ b/findaword/Guidelines_files/Guidelines.css
@@ -1,12 +1,39 @@
-/* TEMPORARY */
+/* NEW STUFF */
 
+/* FORMATTING FOR TOP QUOTE AND MAX SCREEN SIZE*/
+/* 1 line plus name */
 .main_height_controller {
-	height: 4150px;
-	line-height: 4150px;
+	height: 4400px;
+	line-height: 4400px;
+	background: rgb(220, 256, 256);
 }
 
+/* 2 lines plus name */
+@media screen and (max-width: 695px) {
+	.main_height_controller {
+		height: 4700px;
+		line-height: 4700px;
+		background: rgb(256, 220, 256);
+	}
+}
 
-/* NEW STUFF */
+/* 3 lines plus name */
+@media screen and (max-width: 435px) {
+	.main_height_controller {
+		height: 5010px;
+		line-height: 5010px;
+		background: rgb(256, 256, 220);
+	}
+}
+
+/* 4 lines plus name */
+@media screen and (max-width: 350px) {
+	.main_height_controller {
+		height: 5230px;
+		line-height: 5230px;
+		background: rgb(220, 220, 220);
+	}
+}
 
 #rcorners4 {
 	border-radius: 15px;
@@ -14,578 +41,32 @@
 	height: 18px; 
     text-align: center;
 }
-.w3-theme {color:#fff !important;background-color:#73AD21 !important;background-color:#4CAF50 !important}
+
+.w3-theme {
+	color:#fff !important;
+	background-color:#73AD21 !important;
+	background-color:#4CAF50 !important;
+}
 
 .button_indent {
     margin-left: 30px;
 }
 
+.style_game_link {
+    font-family: 'Georgia', serif;
+    font-size: 14px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 16px;
+    text-decoration: none;
+    text-transform: none;
+}
+
 /* OLDSTUFF */
 
-.style {
-    padding: 4px;
-}
-.paragraph_style {
-    color: rgb(0, 0, 0);
-    font-family: 'AmericanTypewriter', 'American Typewriter', 'Courier', serif;
-    font-size: 47px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 54px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 0px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-shadow: 3px 3px 10px rgb(0, 0, 0);
-    text-transform: none;
-}
-.style_1 {
-    padding: 0px;
-}
-.paragraph_style_1 {
-    color: rgb(0, 188, 242);
-    font-family: 'AmericanTypewriter', 'American Typewriter', 'Courier', serif;
-    font-size: 20px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 23px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 4px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
-}
-.paragraph_style_2 {
-    color: rgb(0, 0, 0);
-    font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
-    font-size: 10px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 12px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 6px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
-}
-.style_2 {
-    color: rgb(0, 0, 0);
-    font-family: 'Georgia', serif;
-    font-size: 14px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 16px;
-    opacity: 1.00;
-    text-decoration: none;
-    text-transform: none;
-}
-.paragraph_style_3 {
-    color: rgb(0, 0, 0);
-    font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
-    font-size: 10px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 12px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 6px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
-}
-.style_3 {
-    color: rgb(0, 0, 0);
-    font-family: 'Georgia-Bold', 'Georgia', serif;
-    font-size: 14px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 700;
-    letter-spacing: 0;
-    line-height: 16px;
-    opacity: 1.00;
-    text-decoration: none;
-    text-transform: none;
-}
-.style_4 {
-    font-family: 'Georgia', serif;
-    font-size: 14px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 16px;
-    text-decoration: none;
-    text-transform: none;
-}
-.paragraph_style_4 {
-    color: rgb(0, 0, 0);
-    font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
-    font-size: 10px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 12px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 6px;
-    padding-top: 0px;
-    text-align: center;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
-}
-.paragraph_style_5 {
-    color: rgb(0, 0, 0);
-    font-family: 'Optima-Bold', 'Optima';
-    font-size: 15px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 700;
-    letter-spacing: 0;
-    line-height: 18px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 6px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
-}
-.style_5 {
-    color: rgb(0, 0, 0);
-    font-family: 'Georgia-Bold', 'Georgia', serif;
-    font-size: 19px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 700;
-    letter-spacing: 0;
-    line-height: 21px;
-    opacity: 1.00;
-    text-decoration: none;
-    text-transform: none;
-}
-.paragraph_style_6 {
-    color: rgb(0, 0, 0);
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 6px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
-    /* ADDED */
-    line-height: 16px;
-    font-family: 'Georgia', serif;
-    font-size: 14px;
-}
-.paragraph_style_7 {
-    color: rgb(0, 0, 0);
-    font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
-    font-size: 10px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 12px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 6px;
-    padding-top: 0px;
-    text-align: center;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
-}
-.paragraph_style_8 {
-    color: rgb(0, 0, 0);
-    font-family: 'Optima-Bold', 'Optima';
-    font-size: 15px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 700;
-    letter-spacing: 0;
-    line-height: 18px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 6px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
-}
-.style_6 {
-    font-family: 'Georgia-Bold', 'Georgia', serif;
-    font-size: 14px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 700;
-    letter-spacing: 0;
-    line-height: 16px;
-    text-decoration: none;
-    text-transform: none;
-}
-.paragraph_style_9 {
-    color: rgb(0, 0, 0);
-    font-family: 'Georgia-Bold', 'Georgia', serif;
-    font-size: 19px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 700;
-    letter-spacing: 0;
-    line-height: 21px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 6px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
-}
-.style_7 {
-    color: rgb(0, 0, 0);
-    font-family: 'Georgia-Bold', 'Georgia', serif;
-    font-size: 19px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 700;
-    letter-spacing: 0;
-    line-height: 21px;
-    opacity: 1.00;
-    text-decoration: none;
-    text-transform: none;
-}
-.style_8 {
-    padding: 4px;
-}
-.paragraph_style_10 {
-    color: rgb(113, 113, 113);
-    font-family: 'Georgia', serif;
-    font-size: 13px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 18px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 0px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
-}
-.style_9 {
-    padding: 4px;
-}
-.style_SkipStrokeSkipFillSkipOpacity {
-    float: none;
-    margin: 0px;
-}
-.style_External_700_70 {
-    position: relative;
-}
-.style_External_673_4139 {
-    bottom: 0px;
-    position: relative;
-    width: 673px;
-}
-.style_External_275_62 {
-    bottom: 0px;
-    position: relative;
-    width: 275px;
-}
-.style_SkipStroke {
-    background: transparent;
-    opacity: 1.00;
-}
-.style_SkipStroke_1 {
-    background: transparent;
-    float: none;
-    margin: 0px;
-    opacity: 1.00;
-}
-.style_SkipStroke_2 {
-    background: transparent;
-    float: none;
-    margin: 0px;
-    opacity: 1.00;
-}
-.style_SkipStroke_3 {
-    background: transparent;
-    opacity: 1.00;
-}
-.style_SkipStroke_4 {
-    background: transparent;
-    float: none;
-    margin: 0px;
-    opacity: 1.00;
-}
-.style_SkipStroke_5 {
-    background: transparent;
-    opacity: 1.00;
-}
-.style_SkipStroke_6 {
-    background: transparent url(About_Header_Paper.jpg) repeat scroll top left;
-    opacity: 1.00;
-}
-.style_External_163_128 {
-    position: relative;
-}
-.Accomplishments {
-    color: rgb(0, 0, 0);
-    font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
-    font-size: 10px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 12px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 0px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
-}
-.Body {
-    color: rgb(81, 81, 81);
-    font-family: 'HelveticaNeue', 'Helvetica Neue', 'Arial', sans-serif;
-    font-size: 12px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 17px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 0px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
-}
-.Header {
-    color: rgb(121, 121, 121);
-    font-family: 'HelveticaNeue-Light', 'Helvetica Neue', 'Arial', sans-serif;
-    font-size: 36px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 300;
-    letter-spacing: 0;
-    line-height: 44px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 0px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
-}
-.Heading_1 {
-    color: rgb(183, 97, 78);
-    font-family: 'HelveticaNeue-Light', 'Helvetica Neue', 'Arial', sans-serif;
-    font-size: 36px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 300;
-    letter-spacing: 0;
-    line-height: 44px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 0px;
-    padding-top: 0px;
-    text-align: right;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
-}
-.Normal_External_673_4139 {
-    bottom: 0px;
-    position: absolute;
-    width: 673px;
-}
-.Normal_External_275_62 {
-    bottom: 0px;
-    position: absolute;
-    width: 275px;
-}
-.Normal {
-    padding: 0px;
-}
-.Standard {
-    color: rgb(0, 0, 0);
-    font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
-    font-size: 10px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    opacity: 1.00;
-    text-decoration: none;
-    text-transform: none;
-}
-.graphic_generic_body_textbox_style_default_SkipStroke {
-    background: transparent;
-    opacity: 1.00;
-}
-.graphic_generic_header_textbox_style_default_SkipStroke {
-    background: transparent;
-    opacity: 1.00;
-}
-.graphic_image_style_default_SkipStroke {
-    background: transparent;
-    float: none;
-    margin: 0px;
-    opacity: 1.00;
-}
-.graphic_image_style_default_2_SkipStroke {
-    background: transparent;
-    float: none;
-    margin: 0px;
-    opacity: 1.00;
-}
-.graphic_shape_layout_style_default_External_700_70 {
-    position: relative;
-}
-.graphic_shape_layout_style_default {
-    padding: 4px;
-}
-.graphic_shape_style_default_SkipStrokeSkipFillSkipOpacity {
-    float: none;
-    margin: 0px;
-}
-.graphic_shape_style_default_SkipStroke {
-    background: rgb(183, 97, 78);
-    opacity: 1.00;
-}
-.graphic_shape_style_default_2_SkipStroke {
-    background: transparent url(About_Header_Paper.jpg) repeat scroll top left;
-    opacity: 1.00;
-}
-.graphic_shape_style_default_4_SkipStrokeSkipFillSkipOpacity {
-    float: none;
-    margin: 0px;
-}
-.graphic_textbox_layout_style_default_External_163_128 {
-    position: relative;
-}
-.graphic_textbox_layout_style_default {
-    padding: 4px;
-}
-.graphic_textbox_style_default_SkipStroke {
-    background: transparent;
-    opacity: 1.00;
-}
-a {
-    color: rgb(183, 97, 78);
-    text-decoration: none;
-}
-a:visited {
-    color: rgb(66, 66, 66);
-    text-decoration: none;
-}
 a.class1 {
     color: rgb(178, 23, 2);
 }
@@ -616,85 +97,7 @@ a.class3:hover {
     color: rgb(224, 133, 102);
     text-decoration: underline;
 }
-a.class4 {
-    color: rgb(178, 23, 2);
-}
-a.class4:visited {
-    color: rgb(178, 23, 2);
-}
-a.class4:hover {
-    color: rgb(224, 133, 102);
-    text-decoration: underline;
-}
-a.class5 {
-    color: rgb(178, 23, 2);
-}
-a.class5:visited {
-    color: rgb(178, 23, 2);
-}
-a.class5:hover {
-    color: rgb(224, 133, 102);
-    text-decoration: underline;
-}
-a.class6 {
-    color: rgb(178, 23, 2);
-}
-a.class6:visited {
-    color: rgb(178, 23, 2);
-}
-a.class6:hover {
-    color: rgb(224, 133, 102);
-    text-decoration: underline;
-}
-a:hover {
-    color: rgb(224, 133, 102);
-    text-decoration: underline;
-}
-ol  { 
-      padding:0;
-      margin:0;
-      text-indent:0;
-      list-style-type:none ;
-      list-style-image:none
-    }
-.Bullet { 
-          text-decoration:none ;
-          text-transform:none ;
-          border: none;          
-        }
-.bumper {
-    font-size: 1px;
-    line-height: 1px;
-}
-.tinyText {
-    font-size: 1px;
-    line-height: 1px;
-}
-#widget0 a:hover {
-    color: rgb(224, 133, 102);
-    text-decoration: underline;
-}
-#widget0 a:visited {
-    color: rgb(66, 66, 66);
-    text-decoration: none;
-}
-#widget0 a {
-    color: rgb(183, 97, 78);
-    text-decoration: none;
-}
-.spacer {
-    font-size: 1px;
-    line-height: 1px;
-}
-body { 
-    -webkit-text-size-adjust: none;
-}
-div { 
-    overflow: visible; 
-}
-img { 
-    border: none; 
-}
+
 .InlineBlock { 
     display: inline; 
 }
@@ -705,20 +108,4 @@ img {
     display: inline-block;
     vertical-align: baseline;
     margin-bottom:0.3em;
-}
-.inline-block.shape-with-text {
-    vertical-align: bottom;
-}
-.vertical-align-middle-middlebox {
-    display: table;
-}
-.vertical-align-middle-innerbox {
-    display: table-cell;
-    vertical-align: middle;
-}
-div.paragraph {
-    position: relative;
-}
-li.full-width {
-    width: 100;
 }
