--- a/findaword/Guidelines_files/Guidelines.css
+++ b/findaword/Guidelines_files/Guidelines.css
@@ -5,7 +5,7 @@
 .main_height_controller {
 	height: 4500px;
 	line-height: 4500px;
-	background: rgb(220, 256, 256);
+	/* background: rgb(220, 256, 256); */
 }
 
 /* 2 lines plus name */
@@ -13,7 +13,7 @@
 	.main_height_controller {
 		height: 4800px;
 		line-height: 4800px;
-		background: rgb(256, 220, 256);
+		/* background: rgb(256, 220, 256); */
 	}
 }
 
@@ -22,7 +22,7 @@
 	.main_height_controller {
 		height: 5110px;
 		line-height: 5110px;
-		background: rgb(256, 256, 220);
+		/* background: rgb(256, 256, 220); */
 	}
 }
 
@@ -31,7 +31,7 @@
 	.main_height_controller {
 		height: 5380px;
 		line-height: 5380px;
-		background: rgb(220, 220, 220);
+		/* background: rgb(220, 220, 220); */
 	}
 }
 
