--- a/findaword/PrivacyPolicy_files/PrivacyPolicy.css
+++ b/findaword/PrivacyPolicy_files/PrivacyPolicy.css
@@ -1,117 +1,43 @@
-.style {
-    padding: 4px;
+/* NEW STUFF */
+
+/* FORMATTING FOR TOP QUOTE AND MAX SCREEN SIZE*/
+/* 1 line plus name */
+.main_height_controller {
+	height: 2520px;
+	line-height: 2520px;
+	/* background: rgb(220, 256, 256); */
 }
-.paragraph_style {
-    color: rgb(0, 0, 0);
-    font-family: 'AmericanTypewriter', 'American Typewriter', 'Courier', serif;
-    font-size: 47px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 54px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 0px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-shadow: 3px 3px 10px rgb(0, 0, 0);
-    text-transform: none;
+
+/* 2 lines plus name */
+@media screen and (max-width: 695px) {
+	.main_height_controller {
+		height: 3140px;
+		line-height: 3140px;
+		/* background: rgb(256, 220, 256); */
+	}
 }
-.style_1 {
-    padding: 0px;
+
+/* 3 lines plus name */
+@media screen and (max-width: 435px) {
+	.main_height_controller {
+		height: 3650px;
+		line-height: 3650px;
+		/* background: rgb(256, 256, 220); */
+	}
 }
-.paragraph_style_1 {
-    color: rgb(0, 188, 242);
-    font-family: 'AmericanTypewriter', 'American Typewriter', 'Courier', serif;
-    font-size: 20px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 23px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 4px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
+
+/* 4 lines plus name */
+@media screen and (max-width: 350px) {
+	.main_height_controller {
+		height: 4480px;
+		line-height: 4480px;
+		/* background: rgb(220, 220, 220); */
+	}
 }
-.paragraph_style_2 {
-    color: rgb(255, 0, 0);
-    font-family: 'Times-Bold', 'Times', 'Times New Roman', serif;
-    font-size: 23px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 700;
-    letter-spacing: 0;
-    line-height: 36px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 12px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
-}
-.style_2 {
-    color: rgb(0, 0, 0);
-    font-family: 'Times-Roman', 'Times', 'Times New Roman', serif;
-    font-size: 12px;
-    font-stretch: normal;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 36px;
-    opacity: 1.00;
-}
-.paragraph_style_3 {
-    color: rgb(0, 0, 0);
-    font-family: 'Times-Roman', 'Times', 'Times New Roman', serif;
-    font-size: 14px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 18px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 12px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
-}
-.style_3 {
-    font-family: 'Times-Bold', 'Times', 'Times New Roman', serif;
-    font-size: 14px;
-    font-stretch: normal;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 18px;
-}
-.paragraph_style_4 {
+
+/* Basic Styler */
+
+.style_section_title {
     color: rgb(0, 0, 0);
     font-family: 'Times-Bold', 'Times', 'Times New Roman', serif;
     font-size: 18px;
@@ -126,58 +52,38 @@
     margin-right: 0px;
     margin-top: 0px;
     opacity: 1.00;
-    padding-bottom: 15px;
-    padding-top: 0px;
+    padding-bottom: 0px;
+    padding-top: 10px;
     text-align: left;
     text-decoration: none;
     text-indent: 0px;
     text-transform: none;
 }
-.paragraph_style_5 {
+
+.style_subsection_title {
     color: rgb(0, 0, 0);
-    font-family: 'Times-Roman', 'Times', 'Times New Roman', serif;
-    font-size: 12px;
+    font-family: 'Times-Bold', 'Times', 'Times New Roman', serif;
+    font-size: 16px;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: 400;
+    font-weight: 700;
     letter-spacing: 0;
-    line-height: 14px;
+    line-height: 18px;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
     margin-top: 0px;
     opacity: 1.00;
-    padding-bottom: 12px;
-    padding-top: 0px;
+    padding-bottom: 0px;
+    padding-top: 4px;
     text-align: left;
     text-decoration: none;
     text-indent: 0px;
     text-transform: none;
 }
-.paragraph_style_6 {
-    color: rgb(0, 0, 0);
-    font-family: 'Times-Roman', 'Times', 'Times New Roman', serif;
-    font-size: 12px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 14px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 12px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
-}
-.paragraph_style_7 {
+
+.style_minorsection_title {
     color: rgb(0, 0, 0);
     font-family: 'Times-Bold', 'Times', 'Times New Roman', serif;
     font-size: 14px;
@@ -192,49 +98,60 @@
     margin-right: 0px;
     margin-top: 0px;
     opacity: 1.00;
-    padding-bottom: 14px;
-    padding-top: 0px;
+    padding-bottom: 0px;
+    padding-top: 4px;
     text-align: left;
     text-decoration: none;
     text-indent: 0px;
     text-transform: none;
 }
-.paragraph_style_8 {
+
+ul.style_bullet_title {
     color: rgb(0, 0, 0);
+    font-family: 'Georgia', serif;
+    font-size: 1.2rem;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 1.2;
+    opacity: 1.00;
+    text-decoration: none;
+    text-transform: none;
+    /* HAH */
+    margin-bottom: 10px;
+    margin-top: 0px;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    margin-left: 22px;
+		list-style-type: circle;
+}
+
+.style_indented_definition {
+}
+
+
+
+/* OLD STUFF */
+
+.style {
+    padding: 4px;
+}
+.paragraph_style_2 {
+    color: rgb(255, 0, 0);
     font-family: 'Times-Bold', 'Times', 'Times New Roman', serif;
-    font-size: 12px;
+    font-size: 23px;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
     font-weight: 700;
     letter-spacing: 0;
-    line-height: 14px;
+    line-height: 36px;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 16px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
-}
-.paragraph_style_9 {
-    color: rgb(0, 0, 0);
-    font-family: 'Times-Roman', 'Times', 'Times New Roman', serif;
-    font-size: 12px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 14px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
+    margin-top: 20px;
     opacity: 1.00;
     padding-bottom: 12px;
     padding-top: 0px;
@@ -243,339 +160,15 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_4 {
-    line-height: 14px;
-}
-.paragraph_style_10 {
-    color: rgb(0, 0, 238);
-    font-family: 'Times-Roman', 'Times', 'Times New Roman', serif;
-    font-size: 12px;
+.style_bold_word {
+    font-family: 'Times-Bold', 'Times', 'Times New Roman', serif;
+    font-size: 14px;
     font-stretch: normal;
     font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 14px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 12px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: underline;
-    text-indent: 0px;
-    text-transform: none;
-}
-.style_5 {
-    color: rgb(0, 0, 0);
-    line-height: 14px;
-    opacity: 1.00;
-    text-decoration: none;
-}
-.style_6 {
-    padding: 4px;
-}
-.style_SkipStroke {
-    background: transparent;
-    opacity: 1.00;
-}
-.style_SkipStroke_1 {
-    background: transparent;
-    opacity: 1.00;
-}
-.style_SkipStroke_2 {
-    background: transparent;
-    opacity: 1.00;
-}
-.style_External_163_128 {
-    position: relative;
-}
-.paragraph_style_11 {
-    color: rgb(113, 113, 113);
-    font-family: 'Georgia', serif;
-    font-size: 13px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
+    font-weight: 700;
     line-height: 18px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 0px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
 }
-.style_External_275_62 {
-    bottom: 0px;
-    position: relative;
-    width: 275px;
-}
-.style_SkipStroke_3 {
-    background: transparent;
-    opacity: 1.00;
-}
-.style_SkipStroke_4 {
-    background: transparent;
-    opacity: 1.00;
-}
-.style_7 {
-    padding: 4px;
-}
-.style_External_673_2451 {
-    bottom: 0px;
-    position: relative;
-    width: 673px;
-}
-.style_SkipStroke_5 {
-    background: transparent url(About_Header_Paper.jpg) repeat scroll top left;
-    opacity: 1.00;
-}
-.style_SkipStrokeSkipFillSkipOpacity {
-    float: none;
-    margin: 0px;
-}
-.style_External_700_70 {
-    position: relative;
-}
-.Body {
-    color: rgb(81, 81, 81);
-    font-family: 'HelveticaNeue', 'Helvetica Neue', 'Arial', sans-serif;
-    font-size: 12px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 17px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 0px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
-}
-.Free_Form {
-    color: rgb(81, 81, 81);
-    font-family: 'HelveticaNeue', 'Helvetica Neue', 'Arial', sans-serif;
-    font-size: 12px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
+.style_link {
     line-height: 14px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 0px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
 }
-.Header {
-    color: rgb(121, 121, 121);
-    font-family: 'HelveticaNeue-Light', 'Helvetica Neue', 'Arial', sans-serif;
-    font-size: 36px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 300;
-    letter-spacing: 0;
-    line-height: 44px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 0px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
-}
-.Heading_1 {
-    color: rgb(183, 97, 78);
-    font-family: 'HelveticaNeue-Light', 'Helvetica Neue', 'Arial', sans-serif;
-    font-size: 36px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 300;
-    letter-spacing: 0;
-    line-height: 44px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 0px;
-    padding-top: 0px;
-    text-align: right;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
-}
-.Normal {
-    padding: 0px;
-}
-.Normal_External_673_2451 {
-    bottom: 0px;
-    position: absolute;
-    width: 673px;
-}
-.Normal_External_275_62 {
-    bottom: 0px;
-    position: absolute;
-    width: 275px;
-}
-.graphic_generic_body_textbox_style_default_SkipStroke {
-    background: transparent;
-    opacity: 1.00;
-}
-.graphic_generic_header_textbox_style_default_SkipStroke {
-    background: transparent;
-    opacity: 1.00;
-}
-.graphic_image_style_default_SkipStroke {
-    background: transparent;
-    opacity: 1.00;
-}
-.graphic_image_style_default_2_SkipStroke {
-    background: transparent;
-    opacity: 1.00;
-}
-.graphic_shape_layout_style_default {
-    padding: 4px;
-}
-.graphic_shape_layout_style_default_External_700_70 {
-    position: relative;
-}
-.graphic_shape_style_default_SkipStroke {
-    background: rgb(183, 97, 78);
-    opacity: 1.00;
-}
-.graphic_shape_style_default_SkipStrokeSkipFillSkipOpacity {
-    float: none;
-    margin: 0px;
-}
-.graphic_shape_style_default_2_SkipStroke {
-    background: transparent url(About_Header_Paper.jpg) repeat scroll top left;
-    opacity: 1.00;
-}
-.graphic_shape_style_default_4_SkipStrokeSkipFillSkipOpacity {
-    float: none;
-    margin: 0px;
-}
-.graphic_textbox_layout_style_default {
-    padding: 4px;
-}
-.graphic_textbox_layout_style_default_External_163_128 {
-    position: relative;
-}
-.graphic_textbox_style_default_SkipStroke {
-    background: transparent;
-    opacity: 1.00;
-}
-a {
-    color: rgb(183, 97, 78);
-    text-decoration: none;
-}
-a:visited {
-    color: rgb(66, 66, 66);
-    text-decoration: none;
-}
-a:hover {
-    color: rgb(224, 133, 102);
-    text-decoration: underline;
-}
-ol  { 
-      padding:0;
-      margin:0;
-      text-indent:0;
-      list-style-type:none ;
-      list-style-image:none
-    }
-.Bullet { 
-          text-decoration:none ;
-          text-transform:none ;
-          border: none;          
-        }
-.bumper {
-    font-size: 1px;
-    line-height: 1px;
-}
-.tinyText {
-    font-size: 1px;
-    line-height: 1px;
-}
-#widget0 a:hover {
-    color: rgb(224, 133, 102);
-    text-decoration: underline;
-}
-#widget0 a:visited {
-    color: rgb(66, 66, 66);
-    text-decoration: none;
-}
-#widget0 a {
-    color: rgb(183, 97, 78);
-    text-decoration: none;
-}
-.spacer {
-    font-size: 1px;
-    line-height: 1px;
-}
-body { 
-    -webkit-text-size-adjust: none;
-}
-div { 
-    overflow: visible; 
-}
-img { 
-    border: none; 
-}
-.InlineBlock { 
-    display: inline; 
-}
-.InlineBlock { 
-    display: inline-block; 
-}
-.inline-block {
-    display: inline-block;
-    vertical-align: baseline;
-    margin-bottom:0.3em;
-}
-.inline-block.shape-with-text {
-    vertical-align: bottom;
-}
-.vertical-align-middle-middlebox {
-    display: table;
-}
-.vertical-align-middle-innerbox {
-    display: table-cell;
-    vertical-align: middle;
-}
-div.paragraph {
-    position: relative;
-}
-li.full-width {
-    width: 100;
-}
+
