Drafted Word example pages.

--- a/findaword/Two_Words_files/Two_Words.css
+++ b/findaword/Two_Words_files/Two_Words.css
@@ -3,35 +3,35 @@
 /* FORMATTING FOR TOP QUOTE AND MAX SCREEN SIZE*/
 /* 1 line plus name */
 .main_height_controller {
-	height: 2520px;
-	line-height: 2520px;
-	/* background: rgb(220, 256, 256); */
+	height: 2880px;
+	line-height: 2880px;
+	background: rgb(220, 256, 256);
 }
 
 /* 2 lines plus name */
 @media screen and (max-width: 695px) {
 	.main_height_controller {
-		height: 3140px;
-		line-height: 3140px;
-		/* background: rgb(256, 220, 256); */
+		height: 2880px;
+		line-height: 2880px;
+		background: rgb(256, 220, 256);
 	}
 }
 
 /* 3 lines plus name */
 @media screen and (max-width: 435px) {
 	.main_height_controller {
-		height: 3650px;
-		line-height: 3650px;
-		/* background: rgb(256, 256, 220); */
+		height: 2880px;
+		line-height: 2880px;
+		background: rgb(256, 256, 220);
 	}
 }
 
 /* 4 lines plus name */
 @media screen and (max-width: 350px) {
 	.main_height_controller {
-		height: 4480px;
-		line-height: 4480px;
-		/* background: rgb(220, 220, 220); */
+		height: 2880px;
+		line-height: 2880px;
+		background: rgb(220, 220, 220);
 	}
 }
 
